--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.4.1
 autopep8==1.5.7
 Django==3.2.5
+django-cors-headers==3.8.0
 django-filter==2.4.0
 djangorestframework==3.12.4
 pycodestyle==2.7.0
